--- a/한승규.md
+++ b/한승규.md
@@ -155,6 +155,6 @@ kiosk 값 입력 범위 내의 숫자 제외 예외
     
     ## 느낀 점
     
-    나에게 주어진 시간이 더 많았다면 더 좋은 코드를 작성했을 것이라고 생각하지만 구조를 엎고 설계하는 과정이 반복되면서 시간적 여유는 점점 줄어들었다.
+    구조를 엎고 설계하는 과정이 반복되면서 시간적 여유는 점점 줄어들었다.
     
-    이번 과제가 나에게 있어 상당히 오랜만에 코드를 직접 작성하는 시간이었는데 이 코드를 작성하면서 내가 몰랐거나 까먹었던 것을 찾아보고 공부하면서 알게 되었던 것이 많아서 좋았다.
+    이번 과제를 통해 오랜만에 코드를 직접 작성하는 시간을 가졌는데 이 코드를 작성하면서 내가 몰랐거나 까먹었던 것을 찾아보고 공부하면서 알게 되었던 것이 많아서 좋았다.
